[package]
name = "metricsdb"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
float-ord = "0.3"
rand = "0.8"
fnv = "1.0"
libc = "0.2"
dashmap = "5.4"

approx = "0.5"
lazy_static = "1.4"
tempfile = "3"

serde = { version = "1.0", features=["serde_derive"] }
serde_json = "1.0"

axum = "0.6.0-rc.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
gethostname = "0.4.0"